MPfm 0.6.0.1 * Library   - Moved the following classes from Library.cs to separate files:     - UpdateLibraryArgument     - UpdateLibraryException     - UpdateLibraryFinishedData     - UpdateLibraryMode     - UpdateLibraryProgressData     - UpdateLibraryProgressDataSong   - LibraryService: Added constructor and RemoveAudioFilesWithBrokenPaths method. * MVP   - UpdateLibraryPresenter: Added more arguments to the constructor.   - UpdateLibraryPresenter: Added the RefreshStatus method. * GTK   - Updated implementation.
Related to issue #366 and issue #367.

git-svn-id: http://hamster-svn/svn/repos/base@499 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
@@ -95,6 +95,12 @@
     <Compile Include="Services\LibraryService.cs" />
     <Compile Include="Services\UpdateLibraryService.cs" />
     <Compile Include="Services\IUpdateLibraryService.cs" />
+    <Compile Include="UpdateLibrary\UpdateLibraryProgressDataSong.cs" />
+    <Compile Include="UpdateLibrary\UpdateLibraryFinishedData.cs" />
+    <Compile Include="UpdateLibrary\UpdateLibraryArgument.cs" />
+    <Compile Include="UpdateLibrary\UpdateLibraryMode.cs" />
+    <Compile Include="UpdateLibrary\UpdateLibraryProgressData.cs" />
+    <Compile Include="UpdateLibrary\UpdateLibraryException.cs" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
@@ -137,5 +143,6 @@
   -->
   <ItemGroup>
     <Folder Include="Services\" />
+    <Folder Include="UpdateLibrary\" />
   </ItemGroup>
 </Project>
