--- a/MPfm/branches/current/MPfm.Mac/Info.plist
+++ b/MPfm/branches/current/MPfm.Mac/Info.plist
@@ -6,8 +6,12 @@
 	<string>org.mp4m.mac</string>
 	<key>CFBundleName</key>
 	<string>MPfm: Music Player for Musicians</string>
+	<key>CFBundleShortVersionString</key>
+	<string>0.6.0.1</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>501</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.music</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.6</string>
 	<key>NSMainNibFile</key>
