MPfm 0.6.0.1 * MVP   - MainPresenter: Moved Automapper configuration to Bootstrapper.   - Added the Bootstrapper static class (Singleton) for configuring Ninject and Automapper.   - Added the LibraryModule class for configuring Ninject. * GTK   - Now running the Bootstrapper when creating the application (in Main.cs).
Related to issue #361 and issue #368.

git-svn-id: http://hamster-svn/svn/repos/base@508 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
@@ -70,6 +70,8 @@
     <Compile Include="Models\SongInformationEntity.cs" />
     <Compile Include="Models\UpdateLibraryEntity.cs" />
     <Compile Include="Presenters\IUpdateLibraryPresenter.cs" />
+    <Compile Include="Bootstrapper\Bootstrapper.cs" />
+    <Compile Include="Bootstrapper\LibraryModule.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -94,5 +96,8 @@
   <ItemGroup>
     <None Include="Lib\Ninject.dll" />
     <None Include="Lib\AutoMapper.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Bootstrapper\" />
   </ItemGroup>
 </Project>
