MPfm 0.6.0.1 * MVP   - Copied most of the code of UpdateLibraryPresenter/IUpdateLibraryPresenter to UpdateLibraryService/IUpdateLibraryService.   - UpdateLibraryService: Added the OnRefreshStatus and OnProcessEnded events.   - UpdateLibraryEntity: Added the Exception and FilePath properties. * GTK   - Updated implementation.
Related to issue #364. issue #365 and issue #369.

git-svn-id: http://hamster-svn/svn/repos/base@509 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
@@ -72,6 +72,10 @@
     <Compile Include="Presenters\IUpdateLibraryPresenter.cs" />
     <Compile Include="Bootstrapper\Bootstrapper.cs" />
     <Compile Include="Bootstrapper\LibraryModule.cs" />
+    <Compile Include="Services\IUpdateLibraryService.cs" />
+    <Compile Include="Services\UpdateLibraryService.cs" />
+    <Compile Include="Services\Events\RefreshStatusEventArgs.cs" />
+    <Compile Include="Services\Events\ProcessEndedEventArgs.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
