--- a/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
@@ -60,12 +60,9 @@
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="Services\ILibraryService.cs" />
     <Compile Include="Services\LibraryService.cs" />
-    <Compile Include="Views\IMainView.cs" />
-    <Compile Include="Presenters\MainPresenter.cs" />
     <Compile Include="Presenters\UpdateLibraryPresenter.cs" />
     <Compile Include="Models\PlayerPositionEntity.cs" />
     <Compile Include="Services\IMainService.cs" />
-    <Compile Include="Presenters\IMainPresenter.cs" />
     <Compile Include="Views\IUpdateLibraryView.cs" />
     <Compile Include="Models\SongInformationEntity.cs" />
     <Compile Include="Models\UpdateLibraryEntity.cs" />
@@ -76,6 +73,15 @@
     <Compile Include="Services\UpdateLibraryService.cs" />
     <Compile Include="Services\Events\RefreshStatusEventArgs.cs" />
     <Compile Include="Services\Events\ProcessEndedEventArgs.cs" />
+    <Compile Include="Presenters\IPlayerPresenter.cs" />
+    <Compile Include="Presenters\PlayerPresenter.cs" />
+    <Compile Include="Views\IPlayerView.cs" />
+    <Compile Include="Models\LibraryBrowserEntity.cs" />
+    <Compile Include="Models\SongBrowserFilterEntity.cs" />
+    <Compile Include="Views\ILibraryBrowserView.cs" />
+    <Compile Include="Presenters\ILibraryBrowserPresenter.cs" />
+    <Compile Include="Presenters\LibraryBrowserPresenter.cs" />
+    <Compile Include="Helpers\ConfigurationHelper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -103,5 +109,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Bootstrapper\" />
+    <Folder Include="Helpers\" />
   </ItemGroup>
 </Project>
