MPfm 0.6.0.1 * Library   - MPfmGateway: Added SelectAudioFiles overload method. * MVP   - Added SongBrowserPresenter and ISongBrowserView.   - Bootstrapper: Added Ninject configuration for LibraryService.   - SongBrowserFilterEntity: Changed properties.   - LibraryBrowserEntity: Changed properties. * GTK   - MainWindow: Added SongBrowserPresenter.
Related to issue #368, issue #371 and issue #374.

git-svn-id: http://hamster-svn/svn/repos/base@516 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
@@ -82,6 +82,9 @@
     <Compile Include="Presenters\ILibraryBrowserPresenter.cs" />
     <Compile Include="Presenters\LibraryBrowserPresenter.cs" />
     <Compile Include="Helpers\ConfigurationHelper.cs" />
+    <Compile Include="Presenters\SongBrowserPresenter.cs" />
+    <Compile Include="Views\ISongBrowserView.cs" />
+    <Compile Include="Presenters\ISongBrowserPresenter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
