--- a/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
@@ -87,6 +87,8 @@
     <Compile Include="Services\Interfaces\ILibraryService.cs" />
     <Compile Include="Services\Interfaces\IMainService.cs" />
     <Compile Include="Services\Interfaces\IUpdateLibraryService.cs" />
+    <Compile Include="Services\InitializationService.cs" />
+    <Compile Include="Services\Interfaces\IInitializationService.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
