MPfm 0.6.0.1 * MVP   - Added the SongBrowserQueryEntity entity.   - ISongBrowserView: Added RefreshSongBrowser method.   - SongBrowserPresenter: Now using the view to update the UI.   - LibraryBrowserPresenter: Added TreeNodeSelected method, which updates the song browser presenter.   - AudioFileCacheService: Now using SongBrowserQueryEntity for method parameters. * GTK   - Updated implementation.
Related to issue #373, issue #374, issue #375 and issue #378.

git-svn-id: http://hamster-svn/svn/repos/base@526 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
@@ -72,7 +72,6 @@
     <Compile Include="Presenters\PlayerPresenter.cs" />
     <Compile Include="Views\IPlayerView.cs" />
     <Compile Include="Models\LibraryBrowserEntity.cs" />
-    <Compile Include="Models\SongBrowserFilterEntity.cs" />
     <Compile Include="Views\ILibraryBrowserView.cs" />
     <Compile Include="Presenters\LibraryBrowserPresenter.cs" />
     <Compile Include="Helpers\ConfigurationHelper.cs" />
@@ -88,6 +87,7 @@
     <Compile Include="Services\Interfaces\IUpdateLibraryService.cs" />
     <Compile Include="Services\InitializationService.cs" />
     <Compile Include="Services\Interfaces\IInitializationService.cs" />
+    <Compile Include="Models\SongBrowserQueryEntity.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
