MPfm 0.6.0.1 * Mac   - Added LibraryBrowserDataSource for NSOutlineView.   - Fixed crash when setting LibraryBrowserDataSource.   - Added LibraryBrowser view for testing (trying to integrate a view into a window using Xcode). * GTK   - Added OSX to Bass.Net.dll to run the GTK version on Mac OS X.
git-svn-id: http://hamster-svn/svn/repos/base@545 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.GTK/Bass.Net.dll.config
+++ b/MPfm/branches/current/MPfm.GTK/Bass.Net.dll.config
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<dllmap dll="bass.dll" target="libbass.so"/>
-	<dllmap dll="bass_fx.dll" target="libbass_fx.so"/>
-	<dllmap dll="bassmix.dll" target="libbassmix.so"/>
+	<dllmap dll="bass.dll" target="libbass.so" os="linux" />
+	<dllmap dll="bass_fx.dll" target="libbass_fx.so" os="linux" />
+	<dllmap dll="bassmix.dll" target="libbassmix.so" os="linux" />
+	
+	<dllmap dll="bass.dll" target="libbass.dylib" os="osx" />
+	<dllmap dll="bass_fx.dll" target="libbass_fx.dylib" os="osx" />
+	<dllmap dll="bassmix.dll" target="libbassmix.dylib" os="osx" />
 </configuration>
