MPfm 0.6.0.1 * Mac   - Moved LibraryBrowserDataSource to a different file.   - Added LibraryBrowserItem, which holds a LibraryBrowserEntity and a NSString for the label.   - The Library Browser now has the first level items right, but they only have dummy items after. The nodes are expandable now.
git-svn-id: http://hamster-svn/svn/repos/base@546 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
@@ -110,6 +110,8 @@
     <Compile Include="Views\LibraryBrowser.designer.cs">
       <DependentUpon>LibraryBrowser.cs</DependentUpon>
     </Compile>
+    <Compile Include="Objects\LibraryBrowserDataSource.cs" />
+    <Compile Include="Objects\LibraryBrowserItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="MainWindow.xib" />
@@ -172,5 +174,6 @@
     <Folder Include="Lib\" />
     <Folder Include="Windows\" />
     <Folder Include="Views\" />
+    <Folder Include="Objects\" />
   </ItemGroup>
 </Project>
