MPfm 0.6.0.1 * Mac   - Added SongPositionSlider based on NSSlider to trap mouse events.   - MainWindow: Added outlet for SongPositionSlider. It is shown in Xcode!
Related to issue #381.

git-svn-id: http://hamster-svn/svn/repos/base@549 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
@@ -112,6 +112,7 @@
     </Compile>
     <Compile Include="Objects\LibraryBrowserDataSource.cs" />
     <Compile Include="Objects\LibraryBrowserItem.cs" />
+    <Compile Include="Controls\SongPositionSlider.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="MainWindow.xib" />
@@ -175,5 +176,6 @@
     <Folder Include="Windows\" />
     <Folder Include="Views\" />
     <Folder Include="Objects\" />
+    <Folder Include="Controls\" />
   </ItemGroup>
 </Project>
