MPfm 0.6.0.1 * Mac   - Added LibraryBrowserOutlineViewDelegate based on NSOutlineViewDelegate to trap the event for SelectionDidChange. Now calling the presenter to update the Song Browser (which is not visible yet).
Related to issue #381.

git-svn-id: http://hamster-svn/svn/repos/base@550 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Objects\LibraryBrowserDataSource.cs" />
     <Compile Include="Objects\LibraryBrowserItem.cs" />
     <Compile Include="Controls\SongPositionSlider.cs" />
+    <Compile Include="Objects\LibraryBrowserOutlineViewDelegate.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="MainWindow.xib" />
