MPfm 0.6.0.1 * Mac   - Added images to toolbar items.
Related to issue #381.

git-svn-id: http://hamster-svn/svn/repos/base@552 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
@@ -171,6 +171,17 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Bass.Net.dll.config" />
+    <Content Include="Resources\document-open.png" />
+    <Content Include="Resources\media-playback-pause.png" />
+    <Content Include="Resources\media-playback-start.png" />
+    <Content Include="Resources\media-playback-stop.png" />
+    <Content Include="Resources\media-skip-backward.png" />
+    <Content Include="Resources\media-skip-forward.png" />
+    <Content Include="Resources\view-refresh.png" />
+    <Content Include="Resources\preferences-desktop.png" />
+    <Content Include="Resources\preferences-system.png" />
+    <Content Include="Resources\audio-x-generic.png" />
+    <Content Include="Resources\drive-harddisk.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Lib\" />
@@ -178,5 +189,16 @@
     <Folder Include="Views\" />
     <Folder Include="Objects\" />
     <Folder Include="Controls\" />
+    <Folder Include="Resources\" />
   </ItemGroup>
+  <ProjectExtensions>
+    <MonoDevelop>
+      <Properties>
+        <Policies>
+          <TextStylePolicy inheritsSet="VisualStudio" inheritsScope="text/plain" scope="text/x-csharp" />
+          <CSharpFormattingPolicy IndentSwitchBody="True" AnonymousMethodBraceStyle="NextLine" PropertyBraceStyle="NextLine" PropertyGetBraceStyle="NextLine" PropertySetBraceStyle="NextLine" EventBraceStyle="NextLine" EventAddBraceStyle="NextLine" EventRemoveBraceStyle="NextLine" StatementBraceStyle="NextLine" ArrayInitializerBraceStyle="NextLine" BeforeMethodDeclarationParentheses="False" BeforeMethodCallParentheses="False" BeforeConstructorDeclarationParentheses="False" BeforeDelegateDeclarationParentheses="False" NewParentheses="False" inheritsSet="Mono" inheritsScope="text/x-csharp" scope="text/x-csharp" />
+        </Policies>
+      </Properties>
+    </MonoDevelop>
+  </ProjectExtensions>
 </Project>
