MPfm 0.6.0.1 * Mac   - Added action for the Sound Format popup button. Now refreshing Library Browser.   - Added AlbumCoverHelper to fetch album art and convert it into a NSImage. The album covers are now displayed!   - Added MainSplitViewDelegate to try to limit the size of subviews. Not 100% done yet.
Related to issue #381.

git-svn-id: http://hamster-svn/svn/repos/base@553 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
@@ -88,6 +88,7 @@
     <Reference Include="Ninject">
       <HintPath>Lib\Ninject.dll</HintPath>
     </Reference>
+    <Reference Include="Mono.Posix" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainWindow.cs" />
@@ -114,6 +115,8 @@
     <Compile Include="Objects\LibraryBrowserItem.cs" />
     <Compile Include="Controls\SongPositionSlider.cs" />
     <Compile Include="Objects\LibraryBrowserOutlineViewDelegate.cs" />
+    <Compile Include="Objects\MainSplitViewDelegate.cs" />
+    <Compile Include="Helpers\AlbumCoverHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="MainWindow.xib" />
@@ -190,6 +193,7 @@
     <Folder Include="Objects\" />
     <Folder Include="Controls\" />
     <Folder Include="Resources\" />
+    <Folder Include="Helpers\" />
   </ItemGroup>
   <ProjectExtensions>
     <MonoDevelop>
