MPfm 0.6.0.1 * Mac   - LibraryBrowserOutlineViewDelegate: Fixed crash bug when expanding items.   - Moved images to ImageResources singleton.
Related to issue #381.

git-svn-id: http://hamster-svn/svn/repos/base@555 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Objects\LibraryBrowserOutlineViewDelegate.cs" />
     <Compile Include="Objects\MainSplitViewDelegate.cs" />
     <Compile Include="Helpers\AlbumCoverHelper.cs" />
+    <Compile Include="Objects\ImageResources.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="MainWindow.xib" />
