MPfm 0.6.0.1 * Mac   - Added icon to the application. This is not the final icon, this is the 48x48 icon scaled up to 512x512.
Related to issue #381.

git-svn-id: http://hamster-svn/svn/repos/base@557 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
@@ -186,6 +186,7 @@
     <Content Include="Resources\preferences-system.png" />
     <Content Include="Resources\audio-x-generic.png" />
     <Content Include="Resources\drive-harddisk.png" />
+    <Content Include="MPfm.icns" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Lib\" />
