--- a/MPfm/branches/current/MPfm.Mac/Info.plist
+++ b/MPfm/branches/current/MPfm.Mac/Info.plist
@@ -2,14 +2,20 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleIconFile</key>
+	<string>MPfm.icns</string>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>MPfm.icns</string>
+	</array>
 	<key>CFBundleIdentifier</key>
 	<string>org.mp4m.mac</string>
 	<key>CFBundleName</key>
-	<string>MPfm: Music Player for Musicians</string>
+	<string>MPfm</string>
 	<key>CFBundleShortVersionString</key>
 	<string>0.6.0.1</string>
 	<key>CFBundleVersion</key>
-	<string>501</string>
+	<string>502</string>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.music</string>
 	<key>LSMinimumSystemVersion</key>
