MPfm 0.6.0.1 * Mac   - Added SongBrowserDataSource for the Song Browser (NSTableView).   - Added SongBrowserItem.   - MainWindow: Cleaned up user interface and added columns to Song Browser.   - MainWindow: Added a ton more actions and outlets.   - MainWindow: The Song Browser is now refreshed when changing the Library Browser selection.   - Misc typo fixes in several files.
Related to issue #381.

git-svn-id: http://hamster-svn/svn/repos/base@559 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
@@ -118,6 +118,8 @@
     <Compile Include="Objects\MainSplitViewDelegate.cs" />
     <Compile Include="Helpers\AlbumCoverHelper.cs" />
     <Compile Include="Objects\ImageResources.cs" />
+    <Compile Include="Objects\SongBrowserDataSource.cs" />
+    <Compile Include="Objects\SongBrowserItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="MainWindow.xib" />
