MPfm 0.6.0.1 * Mac   - Added SongBrowserTableViewDelegate for the Song Browser NSTableView.   - The Library Browser and Song Browser are now double-clickable; this starts the playback of a new playlist.
Related to issue #381.

git-svn-id: http://hamster-svn/svn/repos/base@561 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Objects\ImageResources.cs" />
     <Compile Include="Objects\SongBrowserDataSource.cs" />
     <Compile Include="Objects\SongBrowserItem.cs" />
+    <Compile Include="Objects\SongBrowserTableViewDelegate.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="MainWindow.xib" />
