MPfm 0.6.0.1 * MVP   - Added PlayerVolumeEntity and PlayerTimeShiftingEntity.   - IPlayerView: Added RefreshPlayerVolume and RefreshPlayerTimeShifting. * Mac   - Updated implementation.
Related to issue #360, issue #361 and issue #381.

git-svn-id: http://hamster-svn/svn/repos/base@565 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
@@ -88,6 +88,8 @@
     <Compile Include="Services\InitializationService.cs" />
     <Compile Include="Services\Interfaces\IInitializationService.cs" />
     <Compile Include="Models\SongBrowserQueryEntity.cs" />
+    <Compile Include="Models\PlayerVolumeEntity.cs" />
+    <Compile Include="Models\PlayerTimeShiftingEntity.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
