MPfm 0.6.0.1 * Mac   - Added media-playback-pause.png (16x16).   - MainWindow: Assigned image resources to all buttons.
Related to issue #381.

git-svn-id: http://hamster-svn/svn/repos/base@569 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
@@ -193,9 +193,9 @@
     <Content Include="Resources\16x16\go-last.png" />
     <Content Include="Resources\16x16\list-add.png" />
     <Content Include="Resources\16x16\list-remove.png" />
-    <Content Include="Resources\16x16\media-playback-pause.png" />
     <Content Include="Resources\16x16\media-playback-start.png" />
     <Content Include="Resources\16x16\accessories-text-editor.png" />
+    <Content Include="Resources\16x16\media-playback-stop.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Lib\" />
